      to the game server exists.
  Changes:
    - Will not remove signals when converting to depot by default.  Hold Shift when clicking depot
      checkbox to remove Requester/Provider related signals
  Features:
    - Added reset buttons for LTN signals that will clear the signal to use the LTN default (#12)
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2023-05-15
  Bugfixes:
    - Added missing locale string help for /ltnc-unset-requester
    - Attempt to avoid an elusive crash bug with some additional validation.
    - Re-fix crash if Network Description Icon is from a mod you removed.  (#5)
  Changes:
    - Added a debug output file in script-out.  There have been a few reports of a crash in
      multi-player that I haven't been able to reproduce, or track down the source.  If these
      conditions present again it will dump some data from this mod to a file and print a message
      on the screen instead of crashing.  If you run into this, please provide the file it creates
      and a description of what you were doing when it happened, who-else was online, if they were
      working with any combinators, anything that could help reproduce the conditions.
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2023-05-13
  Info:
    - *** Potential loss of request signals - please check your mod settings        ***
      *** Only impacts users that changed the default number of signal rows pre-2.0 ***
          Apparently setting values are not moved during the migration scripts
          The number of signal rows setting changed names when migrating to 2.0 and reverts to the
          default value of 2.  If you had a larger number pre-2.0, please check your settings
          before loading loading / saving your game.  Making sure the new setting is large enough