@@ -45,6 +45,7 @@ ltnc-apply-instruction=Apply changes
 ltnc-cancel-instruction=Cancel changes
 signal-not-default=Reset to LTN Default
 signal-is-default=This is the default value
+signal-confirm=Hold [color=blue]SHIFT[/color] to keep number positive
 
 [ltnc-signal-tips]
 min-max-default=\n\n[color=blue]Default:[/color] [color=green]__3__[/color]     [color=blue]Min:[/color] __1__  [color=blue]Max:[/color] __2__
@@ -83,7 +84,7 @@ ltnc-disable-built-combinators=Force disable newly built LTN combinators
 
 [mod-setting-description]
 ltnc-use-stacks=If checked, requests for items will be entered as stacks instead of individual count.\n\n[color=blue]Default:[/color] [color=green]True[/color]
-ltnc-negative-signals=When enabled and the combinator is set as a requester, newly created 'Item' and 'Fluid' signals will be made negative.\n\n[color=blue]Default:[/color] [color=green]True[/color]
+ltnc-negative-signals=When enabled, newly created 'Item' and 'Fluid' signals will be made negative.\nHolding [color=blue]SHIFT[/color] will let the value remain positive.\n[color=blue]Default:[/color] [color=green]True[/color]
 ltnc-emit-default-network-id=When enabled, a Network ID that matches the LTN default Network ID will not be removed from the combinator.\n\n[color=blue]Default:[/color] [color=green]False[/color]
 ltnc-emit-explicit-default=When enabled, you may set a signal to match the LTN default value.  It will not be removed from the combinator if the LTN default changes.\n\n[color=blue]Default:[/color] [color=green]False[/color]
 ltnc-misc-signal-rows=Number of rows available for Non-LTN control signals.\n\n[color=blue]Default:[/color] [color=green]2[/color]
